# lol

./: README.org  pyproject.toml
eh/: cli.py  model.py  types.py
lol/: cli.py  model.py
resources/: config.yaml  model.pkl  transforms.txt
tests/: test_eh.py  test_lol.py
